# triz_quiz

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  Technical_requirenments.md  bot.py  config.py  db.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run.py  run_all.py  run_local.sh  scenario.example.yaml  scenario.json  server.py
app/: app_factory.py  avatars.py  bot.py  db.py  hub.py  main.py  models.py  public_context.py  rich_text.py  scenario_loader.py  scoring.py  settings.py  state.py  step_types.py  texts.py  web.py
app/avatars/: __init__.py  emoji.py  sticker.py  utils.py
app/bot/: __init__.py  context.py  handlers.py  keyboards.py  media_cache.py  prompts.py
app/static/: app.js  base.css  components.css  ideas.css  leaderboard.css  registration.js  styles.css  tokens.css
app/step_types/: __init__.py  leaderboard.py  multi.py  open_step.py  quiz.py  registration.py  sequence.py
app/templates/: base.html  base.jinja2  moderator.html  preview_empty.jinja2  public.html  reset.html  reset.jinja2
powerpoint_addin/: README.md  manifest.xml  taskpane.html  taskpane.js
src/: __init__.py  config.py  db.py  resources.py  scenario.json  server.py
src/bot/: __init__.py  core.py  formatting.py  handlers.py  state.py
src/static/: main.css  (+1 more)
templates/: index.html
tests/: test_avatar_cleanup.py  test_downscale_quality.py  test_emoji_avatar.py  test_multi_loader.py  test_multi_scoring.py  test_public_context.py  test_quiz_timer.py  test_rich_text.py  test_sequence_scoring.py  test_sequence_timer.py  test_sticker_avatar.py
(+36 files in other folders)
