[project]
name = "triz-quiz"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.21.0",
    "aiohttp>=3.12.15",
    "flask>=3.1.1",
    "flask-socketio>=5.5.1",
    "python-dotenv>=1.0.1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"triz_quiz" = ["scenario.json", "templates/*.html"]
