[project]
name = "triz-quiz"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "aiogram>=3.5,<4.0",
    "aiohttp>=3.12.15",
    "aiosqlite>=0.20",
    "fastapi>=0.110",
    "jinja2>=3.1",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "python-multipart>=0.0.9",
    "sqlalchemy[asyncio]>=2.0",
    "uvicorn[standard]>=0.29",
    "requests>=2.32",
    "pillow>=12.0.0",
    "rlottie-python>=1.3.8",
]
